[package]
name = "learning-grpc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "0.5"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
prost = "0.8"


[build-dependencies]
tonic-build = "0.5"

[lib]
path = "./src/lib.rs"

[[bin]]
name="server"
path="./src/server.rs"

[[bin]]
name="client"
path="./src/client.rs"